fixed thumbnail clipping

--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -16,7 +16,7 @@ body {
 
     padding-top: 8px;
     padding-bottom: 8px;
-    margin-left: 320px;
+    padding-left: 320px;
 }
 
 input {
@@ -50,7 +50,7 @@ button {
 }
 
 .thumbnail {
-    margin-top: 25px;
+    margin-top: 80px;
     margin-bottom: 4px;
 }
 .title {
